fixed an issue with a gap on the top of the contact page in firefox.

--- a/css/main.css
+++ b/css/main.css
@@ -6,10 +6,8 @@ GENERAL
     max-width: 940px;
     margin: 0 auto;
     padding: 0 5%;
+    clear: both;
 }
-
-
-
 
 a {
     text-decoration: none; /** Removes link styling. **/
